Let developers write transforms in Java, with the contract still in metadata
A step can now name a class instead of describing the work:

    - id: scored
      type: java
      class: com.example.retail.OrderRiskScore
      from: lines
      options:
        highValueThreshold: "${high_value_threshold}"
      schema: retail.orders.risk

The class implements one method - take the input, transform it, return it - and
depends on a new foundry-api module and Spark, nothing else. Keeping the API in
a module of its own is what makes that promise checkable rather than a
convention: it has no dependency it could leak. TransformInput is constructible
directly, so a transform's tests need a DataFrame and a few options rather than
a running framework.

The contract stays in the metadata, and that division is the point. The
framework cannot read Java to work out what a class produces, so if the class
were the only statement of its own output then at that step the sink's contract
check, the static column checking of everything downstream and the column
lineage would all stop working. Declaring the shape keeps them working, keeps
the data reviewable without opening the implementation, and turns "this class
quietly started returning a different column" into a failed run that names the
step. A column the class returns that nobody declared is projected away rather
than written.

What the class is told is metadata too: options configure it per step and may
carry ${parameters}, so one class can score strictly in one environment and
leniently in another without a recompile; pipeline parameters arrive typed; and
requiredOptions() is checked while validating. The class itself is resolved
while planning, so a rename or a missing jar fails in a pre-commit hook rather
than at 3am. --plugins takes a jar, a directory of jars or a directory of
classes, and is passed to Spark as spark.jars so executors see it too.

Also:

- A lineage: block, for either escape hatch. Column lineage is the one t